--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,7 +12,7 @@ classifiers = [
     "Programming Language :: Python",
     "Operating System :: OS Independent",
 ]
-license = "GNU"
+license = "GPL-3.0"
 license-files = ["LICENSE"]
 
 [project.urls]
